# emdevgtk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gtkwheelcontrol/: CMakeLists.txt  gtkwheelcontrol.c  gtkwheelcontrol.h  gtkwheelcontrol_priv.h
